<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>dlg_DMS_float</class>
 <widget class="QDialog" name="dlg_DMS_float">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>281</width>
    <height>294</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Convert</string>
  </property>
  <widget class="QLineEdit" name="lineEditInput_1">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>40</y>
     <width>21</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLabel" name="TitleText">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>10</y>
     <width>201</width>
     <height>16</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>10</pointsize>
     <weight>75</weight>
     <bold>true</bold>
    </font>
   </property>
   <property name="text">
    <string>Title</string>
   </property>
  </widget>
  <widget class="QLabel" name="TextInput_2">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>70</y>
     <width>55</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>Input_2</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pb_convert">
   <property name="geometry">
    <rect>
     <x>30</x>
     <y>240</y>
     <width>93</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>Convert</string>
   </property>
  </widget>
  <widget class="QLabel" name="TextInput_1">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>40</y>
     <width>55</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>Input_1</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditOutput_1">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>130</y>
     <width>113</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="readOnly">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditOutput_2">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>160</y>
     <width>113</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="readOnly">
    <bool>true</bool>
   </property>
  </widget>
  <widget class="QLabel" name="TextOutput_2">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>160</y>
     <width>55</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>Output_2</string>
   </property>
  </widget>
  <widget class="QLabel" name="TextOutput_1">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>130</y>
     <width>55</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>Output_1</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pb_exit">
   <property name="geometry">
    <rect>
     <x>140</x>
     <y>240</y>
     <width>93</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>Exit</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditInput_2">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>40</y>
     <width>21</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditInput_3">
   <property name="geometry">
    <rect>
     <x>150</x>
     <y>40</y>
     <width>41</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditInput_6">
   <property name="geometry">
    <rect>
     <x>150</x>
     <y>70</y>
     <width>41</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditInput_4">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>70</y>
     <width>21</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEditInput_5">
   <property name="geometry">
    <rect>
     <x>120</x>
     <y>70</y>
     <width>21</width>
     <height>22</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QLabel" name="DMSLabel1">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>40</y>
     <width>111</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>°         '                &quot; E</string>
   </property>
  </widget>
  <widget class="QLabel" name="DMSLabel2">
   <property name="geometry">
    <rect>
     <x>110</x>
     <y>70</y>
     <width>111</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>°         '                &quot; N</string>
   </property>
  </widget>
 </widget>
 <tabstops>
  <tabstop>lineEditInput_1</tabstop>
  <tabstop>lineEditInput_2</tabstop>
  <tabstop>lineEditInput_3</tabstop>
  <tabstop>lineEditInput_4</tabstop>
  <tabstop>lineEditInput_5</tabstop>
  <tabstop>lineEditInput_6</tabstop>
  <tabstop>pb_convert</tabstop>
  <tabstop>pb_exit</tabstop>
  <tabstop>lineEditOutput_2</tabstop>
  <tabstop>lineEditOutput_1</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
